--- a/hw1/documentation/main.bib
+++ b/hw1/documentation/main.bib
@@ -1,85 +1,7 @@
-@inproceedings{burgos2013robust,
-	title={Robust face landmark estimation under occlusion},
-	author={Burgos-Artizzu, Xavier and Perona, Pietro and Doll{\'a}r, Piotr},
-	booktitle={Proceedings of the IEEE International Conference on Computer Vision},
-	pages={1513--1520},
-	year={2013}
-}
-
-@article{epstein2014using,
-	title={Using kernels for a video-based mouse-replacement interface},
-	author={Epstein, Samuel and Missimer, Eric and Betke, Margrit},
-	journal={Personal and Ubiquitous Computing},
-	volume={18},
-	number={1},
-	pages={47--60},
-	year={2014},
-	publisher={Springer}
-}
-
-@inproceedings{
-shi1994good,
-	title={Good features to track},
-	author={Shi, Jianbo and Tomasi, Carlo},
-	booktitle={Computer Vision and Pattern Recognition, 1994. Proceedings CVPR'94., 1994 IEEE Computer Society Conference on},
-	pages={593--600},
-	year={1994},
-	organization={IEEE}
-}
-
-@book{tomasi1991detection,
-	title={Detection and tracking of point features},
-	author={Tomasi, Carlo and Kanade, Takeo},
-	year={1991},
-	publisher={School of Computer Science, Carnegie Mellon Univ. Pittsburgh}
-}
-
-@inproceedings{kjeldsen2006improvements,
-	title={Improvements in vision-based pointer control},
-	author={Kjeldsen, Rick},
-	booktitle={Proceedings of the 8th international ACM SIGACCESS conference on Computers and accessibility},
-	pages={189--196},
-	year={2006},
-	organization={ACM}
-}
-
-@misc{
-	mineigen,
-	Title = {detect{M}in{E}igen{F}eatures {MATLAB} function},
-	note = {\url{http://www.mathworks.com/help/vision/ref/detectmineigenfeatures.html}}
-	
-}
-
-@misc{
-	eyetwig,
-	Title = {i{T}racker by {E}ye{T}wig},
-	note = {\url{http://www.eyetwig.com/itracker.htmll}}
-	
-}
-
-@misc{
-	bucammouse,
-	Title = {{C}amera{M}ouse},
-	note = {\url{http://cameramouse.org/downloads.html}}
-	
-}
-
-@misc{
-	demo,
-	Title = {{C}amera {M}ouse {D}emonstration},
-	note = {\url{https://www.youtube.com/watch?v=UI1_e2heyuQ&feature=youtu.be
-	}}
-}
-
-@misc{
-	pointtracker,
-	Title = {vision.{P}oint{T}racker {MATLAB} object},
-	note = {\url{http://www.mathworks.com/help/vision/ref/vision.pointtracker-class.html}}
-	
-}
-
-@misc{
-	cvtoolbox,
-	Title = {{C}omputer {V}ision {S}ystem {T}oolbox},
-	note = {\url{http://www.mathworks.com/help/vision/index.html}}
+@book{thomas2001introduction,
+  title={Introduction to algorithms},
+  author={Thomas H.. Cormen and Leiserson, Charles Eric and Rivest, Ronald L and Stein, Clifford},
+  volume={6},
+  year={2001},
+  publisher={MIT press Cambridge}
 }
